Tue Jul 18 13:49:01 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * modules/ProjectCreator.pm:

          Corrected a logic error in the processing of the 'optional'
          section.  The '||' was not being handled properly.

Fri Jul 14 17:25:16 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * modules/ProjectCreator.pm:

          When expanding variables, through the 'expand' mechanism, escape
          back slashes when generating a project for a project type that
          requires slash conversion.

Fri Jul 14 01:10:35 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * config/qt.mpb:

          Split the UIC into UIC and UIC_Impl.  The header is generated by
          the UIC custom definition and the source file generated by the
          UIC_Impl custom definition.

        * config/qt4_core.mpb:
        * config/qt4_designer.mpb:
        * config/qt4_designercomponents.mpb:
        * config/qt4_gui.mpb:
        * config/qt4_network.mpb:
        * config/qt4_opengl.mpb:
        * config/qt4_sql.mpb:
        * config/qt4_svg.mpb:
        * config/qt4_test.mpb:
        * config/qt4_xml.mpb:

          Added support for Qt4.

        * config/qt_moc.mpb:
        * config/qt_uic.mpb:

          Removed these files.  They have been deprecated long enough.

Thu Jul 13 16:29:33 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * templates/bmake.mpd:
        * templates/bmakedllexe.mpt:
        * templates/bmakelibexe.mpt:
        * templates/em3.mpd:
        * templates/em3vcpdllexe.mpt:
        * templates/nmake.mpd:
        * templates/nmakeexe.mpt:
        * templates/vc6.mpd:
        * templates/vc6dspdllexe.mpt:
        * templates/vc7.mpd:
        * templates/vc7csharp.mpd:
        * templates/vc7exe.mpt:
        * templates/vc7vb.mpd:
        * templates/vc8.mpd:
        * templates/vc8csharp.mpd:
        * templates/vc8exe.mpt:

          Added a template variable named 'windows_style' that controls the