@@ -1,3 +1,10 @@
+Tue Jul 18 14:38:01 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>
+
+        * modules/AutomakeWorkspaceCreator.pm:
+
+          Modified the library location code to accept libraries that
+          happen to be built in the very top-most directory.
+
 Tue Jul 18 13:49:01 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>
 
         * modules/ProjectCreator.pm:
